[gd_scene load_steps=4 format=2]

[ext_resource path="res://Score.gd" type="Script" id=1]
[ext_resource path="res://fonts/score.tres" type="DynamicFont" id=2]
[ext_resource path="res://audio/bet.wav" type="AudioStream" id=3]

[node name="global" type="Node2D"]
script = ExtResource( 1 )

[node name="score_label" type="Label" parent="."]
margin_left = 37.0
margin_top = 26.0
margin_right = 178.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 2 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0

[node name="wait1" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="wait2" type="Timer" parent="."]
wait_time = 3.5

[connection signal="finished" from="end" to="." method="_on_end_finished"]
[connection signal="timeout" from="wait1" to="." method="_on_wait1_timeout"]
[connection signal="timeout" from="wait2" to="." method="_on_wait2_timeout"]
